# PracCudaKernel

./: CMakeLists.txt  README.md  main.cu
